[gd_scene load_steps=12 format=3 uid="uid://d1hglytmquni"]

[ext_resource type="Script" path="res://units/platform/platform.gd" id="1_gvh2q"]
[ext_resource type="Texture2D" uid="uid://cjyvn46nwilg0" path="res://models/towers/archers/idle/0.png" id="2_8ll7e"]
[ext_resource type="PackedScene" uid="uid://cnbl8aw2p0wrn" path="res://units/tower/tower.tscn" id="2_73ia6"]
[ext_resource type="PackedScene" uid="uid://c06g6da1scixg" path="res://scenes/common/tower_stats/tower_stats.tscn" id="3_a1ydp"]
[ext_resource type="PackedScene" uid="uid://du20li6wou6fs" path="res://scenes/common/message/message.tscn" id="4_d13pl"]
[ext_resource type="Texture2D" uid="uid://b5ya13e41k2kt" path="res://ui/buttons/rect/default.svg" id="6_m4jb5"]
[ext_resource type="Texture2D" uid="uid://dsh51r6drxmtr" path="res://ui/buttons/rect/hover.svg" id="7_tquk6"]
[ext_resource type="Texture2D" uid="uid://csq5bonl77fkh" path="res://ui/buttons/rect/disabled.svg" id="8_0f2vw"]
[ext_resource type="Script" path="res://scenes/common/texture_button/texture_button.gd" id="8_54g0n"]
[ext_resource type="Theme" uid="uid://dkqstsnixcewe" path="res://ui/themes/text.tres" id="9_v5vgj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fil16"]
radius = 54.0

[node name="Platform" type="Node2D"]
script = ExtResource("1_gvh2q")
tower_preload = ExtResource("2_73ia6")
tower_stats_preload = ExtResource("3_a1ydp")
message_preload = ExtResource("4_d13pl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -56)
scale = Vector2(1.723, 1.723)
texture = ExtResource("2_8ll7e")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource("CircleShape2D_fil16")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Build Button" type="TextureButton" parent="Menu"]
layout_mode = 0
offset_left = -108.0
offset_top = -42.0
offset_right = 88.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_m4jb5")
texture_pressed = ExtResource("6_m4jb5")
texture_hover = ExtResource("7_tquk6")
texture_disabled = ExtResource("8_0f2vw")
script = ExtResource("8_54g0n")

[node name="Label" type="Label" parent="Menu/Build Button"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = ExtResource("9_v5vgj")
theme_override_font_sizes/font_size = 32
text = "BUILD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade Button" type="TextureButton" parent="Menu"]
layout_mode = 0
offset_left = 10.0
offset_top = -42.0
offset_right = 206.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_m4jb5")
texture_pressed = ExtResource("6_m4jb5")
texture_hover = ExtResource("7_tquk6")
texture_disabled = ExtResource("8_0f2vw")
script = ExtResource("8_54g0n")

[node name="Label" type="Label" parent="Menu/Upgrade Button"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = ExtResource("9_v5vgj")
theme_override_font_sizes/font_size = 32
text = "UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remove Button" type="TextureButton" parent="Menu"]
layout_mode = 0
offset_left = -84.0
offset_top = 6.0
offset_right = 112.0
offset_bottom = 90.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_m4jb5")
texture_pressed = ExtResource("6_m4jb5")
texture_hover = ExtResource("7_tquk6")
texture_disabled = ExtResource("8_0f2vw")
script = ExtResource("8_54g0n")

[node name="Label" type="Label" parent="Menu/Remove Button"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = ExtResource("9_v5vgj")
theme_override_font_sizes/font_size = 32
text = "REMOVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerStats Button" type="TextureButton" parent="Menu"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 201.0
offset_bottom = 90.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_m4jb5")
texture_pressed = ExtResource("6_m4jb5")
texture_hover = ExtResource("7_tquk6")
texture_disabled = ExtResource("8_0f2vw")
script = ExtResource("8_54g0n")

[node name="Label" type="Label" parent="Menu/TowerStats Button"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 57.0
theme = ExtResource("9_v5vgj")
theme_override_font_sizes/font_size = 32
text = "STATS"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="mouse_entered" from="Menu/Build Button" to="Menu/Build Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Build Button" to="Menu/Build Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Build Button" to="." method="_on_build_button_pressed"]
[connection signal="mouse_entered" from="Menu/Upgrade Button" to="Menu/Upgrade Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Upgrade Button" to="Menu/Upgrade Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Upgrade Button" to="." method="_on_upgrade_button_pressed"]
[connection signal="mouse_entered" from="Menu/Remove Button" to="Menu/Remove Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Remove Button" to="Menu/Remove Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Remove Button" to="." method="_on_remove_button_pressed"]
[connection signal="mouse_entered" from="Menu/TowerStats Button" to="Menu/TowerStats Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/TowerStats Button" to="Menu/TowerStats Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/TowerStats Button" to="." method="_on_tower_stats_button_pressed"]
